==> KouweiLee/xiuos-rm3562-mcu/Ubiquitous/XiZi_IIoT_Macro/board/rt1062xb/third_party_driver/uart/connect_usart.c <==
#include <board.h>
#include <connect_usart.h>

static void UartIsr(struct SerialBus *serial, struct SerialDriver *serial_drv, struct SerialHardwareDevice *serial_dev)
{
    struct SerialCfgParam *serial_cfg = (struct SerialCfgParam *)serial_drv->private_data;
    LPUART_Type *uart_base = (LPUART_Type *)serial_cfg->hw_cfg.private_data;

    /* kLPUART_RxDataRegFullFlag can only cleared or set by hardware */
    if (LPUART_GetStatusFlags(uart_base) & kLPUART_RxDataRegFullFlag) {
        SerialSetIsr(serial_dev, SERIAL_EVENT_RX_IND);
    }

    if (LPUART_GetStatusFlags(uart_base) & kLPUART_RxOverrunFlag) {
        /* Clear overrun flag, otherwise the RX does not work. */
        LPUART_ClearStatusFlags(uart_base, kLPUART_RxOverrunFlag);
    }
}

static uint32 SerialInit(struct SerialDriver *serial_drv, struct BusConfigureInfo *configure_info)
{
    NULL_PARAM_CHECK(serial_drv);

    struct SerialCfgParam *serial_cfg = (struct SerialCfgParam *)serial_drv->private_data;
    LPUART_Type *uart_base = (LPUART_Type *)serial_cfg->hw_cfg.private_data;

	struct SerialHardwareDevice *serial_dev = (struct SerialHardwareDevice *)serial_drv->driver.owner_bus->owner_haldev;
	struct SerialDevParam *dev_param = (struct SerialDevParam *)serial_dev->haldev.private_data;

    if (configure_info->private_data) {
        struct SerialCfgParam *serial_cfg_new = (struct SerialCfgParam *)configure_info->private_data;
        SerialCfgParamCheck(serial_cfg, serial_cfg_new);

        if (serial_cfg_new->data_cfg.dev_recv_callback) {
            BusDevRecvCallback(&(serial_dev->haldev), serial_cfg_new->data_cfg.dev_recv_callback);
        }    
    }

	// config serial receive sem timeout
	dev_param->serial_timeout = serial_cfg->data_cfg.serial_timeout;

    lpuart_config_t config;
    LPUART_GetDefaultConfig(&config);
    config.baudRate_Bps = serial_cfg->data_cfg.serial_baud_rate;

    switch (serial_cfg->data_cfg.serial_data_bits)
    {
        case DATA_BITS_7:
            config.dataBitsCount = kLPUART_SevenDataBits;
            break;

        default:
            config.dataBitsCount = kLPUART_EightDataBits;
            break;
    }

    switch (serial_cfg->data_cfg.serial_stop_bits)
    {
        case STOP_BITS_2:
            config.stopBitCount = kLPUART_TwoStopBit;
            break;
        default:
            config.stopBitCount = kLPUART_OneStopBit;
            break;
    }

    switch (serial_cfg->data_cfg.serial_parity_mode)
    {
        case PARITY_ODD:
            config.parityMode = kLPUART_ParityOdd;
            break;
        case PARITY_EVEN:
            config.parityMode = kLPUART_ParityEven;
            break;
        default:
            config.parityMode = kLPUART_ParityDisabled;
            break;
    }

    config.enableTx = true;
    config.enableRx = true;

    LPUART_Init(uart_base, &config, GetUartSrcFreq());
}

static uint32 SerialConfigure(struct SerialDriver *serial_drv, int serial_operation_cmd)
{
    NULL_PARAM_CHECK(serial_drv);

    struct SerialCfgParam *serial_cfg = (struct SerialCfgParam *)serial_drv->private_data;
    LPUART_Type *uart_base = (LPUART_Type *)serial_cfg->hw_cfg.private_data;

    switch (serial_operation_cmd)
    {
        case OPER_CLR_INT:
            DisableIRQ(serial_cfg->hw_cfg.serial_irq_interrupt);
            break;

        case OPER_SET_INT:
            LPUART_EnableInterrupts(uart_base, kLPUART_RxDataRegFullInterruptEnable);
            NVIC_SetPriority(serial_cfg->hw_cfg.serial_irq_interrupt, NVIC_EncodePriority(NVIC_GetPriorityGrouping(), 4, 0));
            EnableIRQ(serial_cfg->hw_cfg.serial_irq_interrupt);
            break;
    }
    return EOK;
}

static int SerialPutChar(struct SerialHardwareDevice *serial_dev, char c)
{
    struct SerialCfgParam *serial_cfg = (struct SerialCfgParam *)serial_dev->private_data;
    LPUART_Type *uart_base = (LPUART_Type *)serial_cfg->hw_cfg.private_data;

    LPUART_WriteByte(uart_base, c);
    while (!(LPUART_GetStatusFlags(uart_base) & kLPUART_TxDataRegEmptyFlag));

    return 1;
}

static int SerialGetChar(struct SerialHardwareDevice *serial_dev)
{
    struct SerialCfgParam *serial_cfg = (struct SerialCfgParam *)serial_dev->private_data;
    LPUART_Type *uart_base = (LPUART_Type *)serial_cfg->hw_cfg.private_data;

    int c = -1;
    if (LPUART_GetStatusFlags(uart_base) & kLPUART_RxDataRegFullFlag) {
        c = LPUART_ReadByte(uart_base);
    }

    return c;
}

int HwUsartInit(void)
{
    x_err_t ret = EOK;

#ifdef BSP_USING_UART1
    static struct SerialCfgParam serial_cfg_1;
    memset(&serial_cfg_1, 0, sizeof(struct SerialCfgParam));

    static struct SerialDevParam serial_dev_param_1;
    memset(&serial_dev_param_1, 0, sizeof(struct SerialDevParam));

    serial_driver_1.drv_done = &drv_done;
    serial_driver_1.configure = SerialDrvConfigure;
    serial_device_1.hwdev_done = &hwdev_done;

    serial_cfg_1.data_cfg = data_cfg_init;

    // default irq configure
    serial_cfg_1.hw_cfg.private_data   = (void *)LPUART1;
    serial_cfg_1.hw_cfg.serial_irq_interrupt = LPUART1_IRQn;
    serial_driver_1.private_data = (void *)&serial_cfg_1;


    serial_dev_param_1.serial_work_mode = SIGN_OPER_INT_RX;
    serial_device_1.haldev.private_data = (void *)&serial_dev_param_1;

    ret = BoardSerialBusInit(&serial_bus_1, &serial_driver_1, SERIAL_BUS_NAME_1, SERIAL_DRV_NAME_1);
    if (EOK != ret)
    {
        KPrintf("HwUartInit uart1 error ret %u\n", ret);
        return ERROR;
    }

    ret = BoardSerialDevBend(&serial_device_1, (void *)&serial_cfg_1, SERIAL_BUS_NAME_1, SERIAL_1_DEVICE_NAME_0);
    if (EOK != ret)
    {
        KPrintf("HwUartInit uart1 error ret %u\n", ret);
        return ERROR;
    }
#endif

    return ret;
}
