==> KouweiLee/xiuos-rm3562-mcu/Ubiquitous/XiZi_IIoT_Macro/board/stm32l476rgt6/third_party_driver/uart/connect_usart.c <==
#include <board.h>
#include <connect_usart.h>

static void UartIsr(struct SerialBus *serial, struct SerialDriver *serial_drv, struct SerialHardwareDevice *serial_dev)
{
    // struct Stm32UsartDma *dma = &serial->dma; 
    struct SerialCfgParam *serial_cfg = (struct SerialCfgParam *)serial_drv->private_data;
    struct UsartHwCfg *serial_hw_cfg = (struct UsartHwCfg *)serial_cfg->hw_cfg.private_data;

    if (__HAL_UART_GET_FLAG(serial_hw_cfg->uart_device, UART_FLAG_RXNE) != RESET) {
        SerialSetIsr(serial_dev, SERIAL_EVENT_RX_IND);
    }
    HAL_UART_IRQHandler(serial_hw_cfg->uart_device);
}

static uint32 SerialInit(struct SerialDriver *serial_drv, struct BusConfigureInfo *configure_info)
{
    NULL_PARAM_CHECK(serial_drv);

    struct SerialCfgParam *serial_cfg = (struct SerialCfgParam *)serial_drv->private_data;
    struct UsartHwCfg *serial_hw_cfg = (struct UsartHwCfg *)serial_cfg->hw_cfg.private_data;

    struct SerialHardwareDevice *serial_dev = (struct SerialHardwareDevice *)serial_drv->driver.owner_bus->owner_haldev;
    struct SerialDevParam *dev_param = (struct SerialDevParam *)serial_dev->haldev.private_data;

    if (configure_info->private_data)
    {
        struct SerialCfgParam *serial_cfg_new = (struct SerialCfgParam *)configure_info->private_data;
        SerialCfgParamCheck(serial_cfg, serial_cfg_new);

        if (serial_cfg_new->data_cfg.dev_recv_callback)
        {
            BusDevRecvCallback(&(serial_dev->haldev), serial_cfg_new->data_cfg.dev_recv_callback);
        }
    }

    // config serial receive sem timeout
    dev_param->serial_timeout = serial_cfg->data_cfg.serial_timeout;

    UART_HandleTypeDef *huart = serial_hw_cfg->uart_device;
    UART_InitTypeDef *uart_init = &huart->Init;

    uart_init->OverSampling = UART_OVERSAMPLING_16;
    uart_init->BaudRate = serial_cfg->data_cfg.serial_baud_rate;
    uart_init->Mode = UART_MODE_TX_RX;
    switch (serial_cfg->data_cfg.serial_data_bits)
    {
    case DATA_BITS_8:
        uart_init->WordLength = UART_WORDLENGTH_8B;
        break;
    case DATA_BITS_9:
        uart_init->WordLength = UART_WORDLENGTH_9B;
        break;
    default:
        uart_init->WordLength = UART_WORDLENGTH_8B;
        break;
    }

    switch (serial_cfg->data_cfg.serial_stop_bits)
    {
    case STOP_BITS_1:
        uart_init->StopBits = UART_STOPBITS_1;
        break;
    case STOP_BITS_2:
        uart_init->StopBits = UART_STOPBITS_2;
        break;
    default:
        uart_init->StopBits = UART_STOPBITS_1;
        break;
    }

    switch (serial_cfg->data_cfg.serial_parity_mode)
    {
    case PARITY_NONE:
        uart_init->Parity = UART_PARITY_NONE;
        break;
    case PARITY_EVEN:
        uart_init->Parity = UART_PARITY_EVEN;
        break;
    case PARITY_ODD:
        uart_init->Parity = UART_PARITY_ODD;
        break;
    default:
        uart_init->Parity = UART_PARITY_NONE;
        break;
    }

    if (BIT_ORDER_LSB == serial_cfg->data_cfg.serial_bit_order)
    {
        huart->AdvancedInit.MSBFirst = UART_ADVFEATURE_MSBFIRST_DISABLE;
    }
    else
    {
        huart->AdvancedInit.MSBFirst = UART_ADVFEATURE_MSBFIRST_ENABLE;
    }

    /* Enable USART clock */
    // FCG_USART_CLK(serial_hw_cfg->usart_clock, ENABLE);
    Uart_Init(serial_hw_cfg->uart_device);
    if (EOK != HAL_UART_Init(serial_hw_cfg->uart_device))
    {
        return ERROR;
    }

    /* Enable error interrupt */
    __HAL_UART_ENABLE_IT(serial_hw_cfg->uart_device, UART_IT_RXNE);
    HAL_NVIC_SetPriority(serial_hw_cfg->irq, 1, 2);
    HAL_NVIC_EnableIRQ(serial_hw_cfg->irq);

    // HAL_UART_Transmit(huart, (uint8_t *)"Hello World\n", 12, 1000);

    return EOK;
}

static uint32 SerialConfigure(struct SerialDriver *serial_drv, int serial_operation_cmd)
{
    NULL_PARAM_CHECK(serial_drv);

    struct SerialCfgParam *serial_cfg = (struct SerialCfgParam *)serial_drv->private_data;
    struct UsartHwCfg *serial_hw_cfg = (struct UsartHwCfg *)serial_cfg->hw_cfg.private_data;

    switch (serial_operation_cmd)
    {
    case OPER_CLR_INT:
        HAL_NVIC_DisableIRQ(serial_hw_cfg->irq);
        break;

    case OPER_SET_INT:
        HAL_NVIC_EnableIRQ(serial_hw_cfg->irq);
        break;
    }

    return EOK;
}

static int SerialPutChar(struct SerialHardwareDevice *serial_dev, char c)
{
    struct SerialCfgParam *serial_cfg = (struct SerialCfgParam *)serial_dev->private_data;
    struct UsartHwCfg *serial_hw_cfg = (struct UsartHwCfg *)serial_cfg->hw_cfg.private_data;

    /* Polling mode. */
    HAL_UART_Transmit(serial_hw_cfg->uart_device, (uint8_t *)&c, 1, 100);

    return 1;
}

static int SerialGetChar(struct SerialHardwareDevice *serial_dev)
{
    struct SerialCfgParam *serial_cfg = (struct SerialCfgParam *)serial_dev->private_data;
    struct UsartHwCfg *serial_hw_cfg = (struct UsartHwCfg *)serial_cfg->hw_cfg.private_data;

    int ch = -1;
    if (serial_hw_cfg->uart_device->Instance->ISR & UART_FLAG_RXNE) {
        ch = serial_hw_cfg->uart_device->Instance->RDR & 0xff;
    }
    return ch;
}

int HwUsartInit(void)
{
    x_err_t ret = EOK;

#ifdef BSP_USING_UART1
    static struct SerialCfgParam serial_cfg_1;
    memset(&serial_cfg_1, 0, sizeof(struct SerialCfgParam));

    static struct SerialDevParam serial_dev_param_1;
    memset(&serial_dev_param_1, 0, sizeof(struct SerialDevParam));

    static struct UsartHwCfg serial_hw_cfg_1;
    memset(&serial_hw_cfg_1, 0, sizeof(struct UsartHwCfg));

    serial_driver_1.drv_done = &drv_done;
    serial_driver_1.configure = SerialDrvConfigure;
    serial_device_1.hwdev_done = &hwdev_done;

    serial_cfg_1.data_cfg = data_cfg_init;

    // default irq configure
    huart1.Instance = USART1;
    serial_hw_cfg_1.uart_device = &huart1;
    serial_hw_cfg_1.irq = USART1_IRQn;

    serial_cfg_1.hw_cfg.private_data = (void *)&serial_hw_cfg_1;
    serial_driver_1.private_data = (void *)&serial_cfg_1;

    serial_dev_param_1.serial_work_mode = SIGN_OPER_INT_RX;
    serial_device_1.haldev.private_data = (void *)&serial_dev_param_1;

    ret = BoardSerialBusInit(&serial_bus_1, &serial_driver_1, SERIAL_BUS_NAME_1, SERIAL_DRV_NAME_1);
    if (EOK != ret)
    {
        KPrintf("HwUartInit uart1 error ret %u\n", ret);
        return ERROR;
    }

    ret = BoardSerialDevBend(&serial_device_1, (void *)&serial_cfg_1, SERIAL_BUS_NAME_1, SERIAL_1_DEVICE_NAME_0);
    if (EOK != ret)
    {
        KPrintf("HwUartInit uart1 error ret %u\n", ret);
        return ERROR;
    }
#endif

#ifdef BSP_USING_UART2
    static struct SerialCfgParam serial_cfg_2;
    memset(&serial_cfg_2, 0, sizeof(struct SerialCfgParam));

    static struct SerialDevParam serial_dev_param_2;
    memset(&serial_dev_param_2, 0, sizeof(struct SerialDevParam));

    static struct UsartHwCfg serial_hw_cfg_2;
    memset(&serial_hw_cfg_2, 0, sizeof(struct UsartHwCfg));

    serial_driver_2.drv_done = &drv_done;
    serial_driver_2.configure = SerialDrvConfigure;
    serial_device_2.hwdev_done = &hwdev_done;

    serial_cfg_2.data_cfg = data_cfg_init;

    // default irq configure
    huart2.Instance = USART2;
    serial_hw_cfg_2.uart_device = &huart2;
    serial_hw_cfg_2.irq = USART2_IRQn;

    serial_cfg_2.hw_cfg.private_data = (void *)&serial_hw_cfg_2;
    serial_driver_2.private_data = (void *)&serial_cfg_2;

    serial_dev_param_2.serial_work_mode = SIGN_OPER_INT_RX;
    serial_device_2.haldev.private_data = (void *)&serial_dev_param_2;

    ret = BoardSerialBusInit(&serial_bus_2, &serial_driver_2, SERIAL_BUS_NAME_2, SERIAL_DRV_NAME_2);
    if (EOK != ret)
    {
        KPrintf("HwUartInit uart2 error ret %u\n", ret);
        return ERROR;
    }

    ret = BoardSerialDevBend(&serial_device_2, (void *)&serial_cfg_2, SERIAL_BUS_NAME_2, SERIAL_2_DEVICE_NAME_0);
    if (EOK != ret)
    {
        KPrintf("HwUartInit uart2 error ret %u\n", ret);
        return ERROR;
    }
#endif

#ifdef BSP_USING_UART3
    static struct SerialCfgParam serial_cfg_3;
    memset(&serial_cfg_3, 0, sizeof(struct SerialCfgParam));

    static struct SerialDevParam serial_dev_param_3;
    memset(&serial_dev_param_3, 0, sizeof(struct SerialDevParam));

    static struct UsartHwCfg serial_hw_cfg_3;
    memset(&serial_hw_cfg_3, 0, sizeof(struct UsartHwCfg));

    serial_driver_3.drv_done = &drv_done;
    serial_driver_3.configure = SerialDrvConfigure;
    serial_device_3.hwdev_done = &hwdev_done;

    serial_cfg_3.data_cfg = data_cfg_init;

    // default irq configure
    huart3.Instance = USART3;
    serial_hw_cfg_3.uart_device = &huart3;
    serial_hw_cfg_3.irq = USART3_IRQn;

    serial_cfg_3.hw_cfg.private_data = (void *)&serial_hw_cfg_3;
    serial_driver_3.private_data = (void *)&serial_cfg_3;

    serial_dev_param_3.serial_work_mode = SIGN_OPER_INT_RX;
    serial_device_3.haldev.private_data = (void *)&serial_dev_param_3;

    ret = BoardSerialBusInit(&serial_bus_3, &serial_driver_3, SERIAL_BUS_NAME_3, SERIAL_DRV_NAME_3);
    if (EOK != ret)
    {
        KPrintf("HwUartInit uart3 error ret %u\n", ret);
        return ERROR;
    }

    ret = BoardSerialDevBend(&serial_device_3, (void *)&serial_cfg_3, SERIAL_BUS_NAME_3, SERIAL_3_DEVICE_NAME_0);
    if (EOK != ret)
    {
        KPrintf("HwUartInit uart3 error ret %u\n", ret);
        return ERROR;
    }
#endif

#ifdef BSP_USING_UART4
    static struct SerialCfgParam serial_cfg_4;
    memset(&serial_cfg_4, 0, sizeof(struct SerialCfgParam));

    static struct SerialDevParam serial_dev_param_4;
    memset(&serial_dev_param_4, 0, sizeof(struct SerialDevParam));

    static struct UsartHwCfg serial_hw_cfg_4;
    memset(&serial_hw_cfg_4, 0, sizeof(struct UsartHwCfg));

    serial_driver_4.drv_done = &drv_done;
    serial_driver_4.configure = SerialDrvConfigure;
    serial_device_4.hwdev_done = &hwdev_done;

    serial_cfg_4.data_cfg = data_cfg_init;

    // default irq configure
    huart4.Instance = UART4;
    serial_hw_cfg_4.uart_device = &huart4;
    serial_hw_cfg_4.irq = UART4_IRQn;

    serial_cfg_4.hw_cfg.private_data = (void *)&serial_hw_cfg_4;
    serial_driver_4.private_data = (void *)&serial_cfg_4;

    serial_dev_param_4.serial_work_mode = SIGN_OPER_INT_RX;
    serial_device_4.haldev.private_data = (void *)&serial_dev_param_4;

    ret = BoardSerialBusInit(&serial_bus_4, &serial_driver_4, SERIAL_BUS_NAME_4, SERIAL_DRV_NAME_4);
    if (EOK != ret)
    {
        KPrintf("HwUartInit uart3 error ret %u\n", ret);
        return ERROR;
    }

    ret = BoardSerialDevBend(&serial_device_4, (void *)&serial_cfg_4, SERIAL_BUS_NAME_4, SERIAL_4_DEVICE_NAME_0);
    if (EOK != ret)
    {
        KPrintf("HwUartInit uart3 error ret %u\n", ret);
        return ERROR;
    }
#endif

#ifdef BSP_USING_UART5
    static struct SerialCfgParam serial_cfg_5;
    memset(&serial_cfg_5, 0, sizeof(struct SerialCfgParam));

    static struct SerialDevParam serial_dev_param_5;
    memset(&serial_dev_param_5, 0, sizeof(struct SerialDevParam));

    static struct UsartHwCfg serial_hw_cfg_5;
    memset(&serial_hw_cfg_5, 0, sizeof(struct UsartHwCfg));

    serial_driver_5.drv_done = &drv_done;
    serial_driver_5.configure = SerialDrvConfigure;
    serial_device_5.hwdev_done = &hwdev_done;

    serial_cfg_5.data_cfg = data_cfg_init;

    // default irq configure
    huart5.Instance = UART5;
    serial_hw_cfg_5.uart_device = &huart5;
    serial_hw_cfg_5.irq = UART5_IRQn;

    serial_cfg_5.hw_cfg.private_data = (void *)&serial_hw_cfg_5;
    serial_driver_5.private_data = (void *)&serial_cfg_5;

    serial_dev_param_5.serial_work_mode = SIGN_OPER_INT_RX;
    serial_device_5.haldev.private_data = (void *)&serial_dev_param_5;

    ret = BoardSerialBusInit(&serial_bus_5, &serial_driver_5, SERIAL_BUS_NAME_5, SERIAL_DRV_NAME_5);
    if (EOK != ret)
    {
        KPrintf("HwUartInit uart5 error ret %u\n", ret);
        return ERROR;
    }

    ret = BoardSerialDevBend(&serial_device_5, (void *)&serial_cfg_5, SERIAL_BUS_NAME_5, SERIAL_5_DEVICE_NAME_0);
    if (EOK != ret)
    {
        KPrintf("HwUartInit uart5 error ret %u\n", ret);
        return ERROR;
    }
#endif

    return ret;
}
